# hotchkiss-io

./: .env  .gitignore  CLAUDE.md  Cargo.toml  PLAN.md  PLAN_ARCHIVE.md  README.md  SPEC.md  bacon.toml  biome.json  build.rs  package-lock.json  package.json  tailwind.config.js
.github/workflows/: build_and_release.yml  check_ip.yml  install.yml  release.yml  test_and_coverage.yml
.zed/: debug.json
assets/: manifest.webmanifest
assets/images/: Photo-320.avif  Photo.avif
assets/images/404/: blame_bonnie.avif  blame_hobbes.avif  blame_puss.avif
assets/scripts/: analytics-chart.js  analytics-range.js  audio-player.js  capture.js  challenge-worker.js  challenge.js  code-highlight.js  diagram-zoom.js  editor-support.js  epub-reader.js  hold-confirm.js  htmx-errors.js  htmx-sortable.js  htmx-stl-view.js  htmx-webauthn.js  index-Bm0e4K35.js  katex-render.js  media-crop.js  media-upload.js  upload-progress.js
docs/: dead-link-checker-design.md  epub-reader-design.md  fab-scad-roundtrip.md  greylist-challenge-design.md  home-control-design.md  library-design.md  mcp-dogfood-feedback.md  mcp-publishing-design.md  media-design.md  newtype-pass-design.md
hotchkiss-io-db/: Cargo.toml  build.rs
hotchkiss-io-dns/: Cargo.toml
hotchkiss-io-dns/src/: lib.rs
hotchkiss-io-frontend/: Cargo.toml  build.rs
hotchkiss-io-ip/: Cargo.toml
hotchkiss-io-ip/src/: lib.rs  localhost.pem
hotchkiss-io-server/: .gitignore  Cargo.toml  build.rs  package.json  tailwind.config.js
hotchkiss-io-server/src/: certificate.rs  coordinator.rs  main.rs
hotchkiss-io-server/src/certificate/: acme_persist_key.rs  cloudflare_client.rs
hotchkiss-io-server/src/coordinator/: acme_provider_service.rs  dns.rs  dns_provider_service.rs  endpoints_provider_service.rs  ip.rs  ip_provider_service.rs  service_coordinator.rs
hotchkiss-io-server/src/coordinator/acme/: acme_persist_key.rs
hotchkiss-io-server/src/coordinator/dns/: cloudflare_api.rs  cloudflare_client.rs
hotchkiss-io-server/src/coordinator/ip/: ifconfig.rs  mod.rs  omada_api.rs  omada_client.rs  omada_config.rs
hotchkiss-io-server/src/web/: dev_frontend.rs  frontend.rs  mod.rs  router.rs  static_content.rs
hotchkiss-io-server/templates/: base.html  contact.html  hello.html
migrations/: 0002_TableUsers.sql  0004_Certificates.sql  0005_CleanupAcmePersist.sql  0007_Content_Pages.sql  0008_Special_Pages.sql  0009_Attachments.sql
src/: dns_setup.rs  lib.rs  main.rs  settings.rs  test_support.rs
src/coordinator/: acme_provider_service.rs  backfill_is_bot.rs  backfill_responsive_images.rs  backup.rs  browser_relaunch_service.rs  dns_provider_service.rs  endpoints_provider_service.rs  ip_provider_service.rs  migrate_media.rs  mod.rs  service_coordinator.rs
src/coordinator/acme/: acme_persist_key.rs  certificate_loader.rs  instant_acme.rs  mod.rs
src/coordinator/dns/: cloudflare_api.rs  cloudflare_client.rs  dns_validator.rs  mod.rs
src/coordinator/ip/: cloudflare_trace.rs  ifconfig.rs  mod.rs
src/db/: database_handle.rs  mod.rs
src/db/dao/: acme_account.rs  api_keys.rs  attachments.rs  certificate.rs  content_pages.rs  crypto_key.rs  greylist.rs  media.rs  mod.rs  projects.rs  request_log.rs  roles.rs  users.rs
src/db/migrations/: 0001_TableAcmePersist.sql  0002_TableInstantAcmeAccount.sql  0004_TableCryptoKeys.sql  0005_TableContentPages.sql  0006_Keys.sql  0007_Content_Pages.sql  0007_DMLSpecialPages.sql  0008_Attachments.sql  0008_DMLCryptoKeysRawBytes.sql  0009_TableRequestLog.sql  0010_DMLBlogSpecialPage.sql  0011_AddPageTitle.sql  0012_DMLResumeSpecialPage.sql  0013_TableMedia.sql  0014_AttachmentMediaMigration.sql  0015_RetireAttachments.sql  0016_TableApiKeys.sql  0017_AddMediaVariantStorageRoot.sql  0018_AddMediaVariantDimensions.sql  0019_AddRequestLogDuration.sql  0020_ViewRequestLogClassified.sql  0021_AnalyticsCoveringIndexes.sql  0022_StoredIsBot.sql  0023_DMLThreeDSpecialPage.sql  0024_TableGreylist.sql  0025_ContentPagesMinRole.sql  0026_MediaMinRole.sql  0027_MediaChapters.sql  0028_DMLLibrarySpecialPage.sql  0029_TableDeadLinks.sql  0030_AddLinkCheckIgnored.sql  0031_DMLCaptureSpecialPage.sql  0032_MediaMetadataColumn.sql
src/deadlinks/: class.rs  classify.rs  dao.rs  external.rs  extract.rs  internal.rs  mod.rs  scan.rs
src/greylist/: active_set.rs  challenge.rs  crawler.rs  detection.rs  image.rs  mod.rs  sweep.rs
src/media/: mod.rs  poster.rs  probe.rs  resize.rs
src/web/: app_error.rs  app_state.rs  authentication_state.rs  error_page.rs  html_template.rs  htmx_refresh.rs  htmx_responses.rs  mod.rs  responder.rs  router.rs  session.rs  static_content.rs
src/web/features/: blog.rs  challenge.rs  child_index.rs  contact.rs  diagram.rs  feed.rs  home.rs  library.rs  listing.rs  login.rs  mcp.rs  media.rs  media_select.rs  mod.rs  navigation_setting.rs  not_found.rs  pages.rs  projects.rs  resume-print.css  resume.rs  seo.rs  test_login.rs  three_d.rs  top_bar.rs
src/web/markdown/: diagram.rs  excerpt.rs  links.rs  mod.rs  render_cache.rs  (+2 more)
styles/: tailwind.css
templates/: 404.html  base.html  challenge.html  contact.html  content_page.html  edit_pages.html  error_page.html  home.html  login.html  projects.html  resume.html
templates/3d/: editor.html  index.html
templates/admin/: api_keys.html  capture.html  dead_links.html  greylist.html  logs.html  manga_ingest.html  media.html  media_edit.html  pages.html  users.html
templates/analytics/: dashboard.html  ip_detail.html
templates/blog/: index.html
templates/pages/: content_page.html  edit_pages.html  get_page.html  list_attachments.html
templates/partials/: admin_nav.html  child_index.html  jumbotron.html  listing_pager.html  listing_search.html  nav.html  seo_meta.html
templates/projects/: list_projects.html
tests/: capture.rs  challenge.rs  dead_links.rs  e2e_browser.rs  e2e_ios.rs  greylist.rs  heic.rs  hero.rs  icons.rs  lint_cargo_lock_in_sync.rs  lint_no_ignored_tests.rs  mcp.rs  scheduled_publishing.rs  server.rs  three_d.rs  web.rs
tests/fixtures/: chapters.m4b  gradient-1200x900.heic  rot-300x200-or6.heic  test.epub
(+40 files in other folders)
