[package]
name = "hotchkiss-io"
description = "Christopher Hotchkiss's Web Home"
version = "0.1.0"
edition = "2021"

[build-dependencies]
anyhow = "1.0"
sqlx = { version = "0.8", features = [
    "runtime-tokio",
    "tls-native-tls",
    "sqlite",
    "macros",
    "migrate",
    "chrono",
] }
tokio = { version = "1.41.1", features = ["full"] }


[dependencies]
#Core Rust
anyhow = "1.0"
url = "2.5.4"

#Async
tokio = { version = "1.41.1", features = ["full"] }

#Certificate Setup
acme-lib = "0.9.1"
hickory-resolver = "0.24.2"
reqwest = { version = "0.12", features = [
    "cookies",
    "hickory-dns",
    "json",
    "rustls-tls",
] }
rustls = { version = "0.23.19", features = ["ring"] }


#Database
sqlx = { version = "0.8", features = [
    "runtime-tokio",
    "tls-native-tls",
    "sqlite",
    "macros",
    "migrate",
    "chrono",
] }

#Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

#Logging
tracing = "0.1.40"
tracing-appender = "0.2.3"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }

#Web Frameworks
askama = "0.12.1"
axum = { version = "0.8.1", features = ["macros"] }
axum-extra = "0.10.0"
axum-login = "0.17.0"
axum-server = { version = "0.7.1", features = ["tls-rustls"] }
build-time = "0.1.3"
http-body-util = "0.1.2"
mime_guess = "2.0.5"
rust-embed = "8.5.0"
tower = "0.5.2"
tower-http = { version = "0.6.2", features = ["full"] }
