[package]
name = "hotchkiss-io"
description = "Christopher Hotchkiss's Web Home"
version = "0.0.18"
edition = "2024"

[build-dependencies]
anyhow = "1.0"
reqwest = { version = "0.12", features = [
    "cookies",
    "hickory-dns",
    "json",
    "rustls-tls",
] }
sqlx = { version = "0.8", features = [
    "runtime-tokio",
    "tls-rustls",
    "sqlite",
    "macros",
    "migrate",
    "chrono",
    "uuid",
] }
tokio = { version = "1.41.1", features = ["full"] }


[dependencies]
#Core Rust
anyhow = "1.0"
strum = { version = "0.26", features = ["derive"] }
url = "2.5.4"

#Async
tokio = { version = "1.41.1", features = ["full"] }

#Certificate Setup
instant-acme = "0.7.2"
hickory-resolver = "0.24.2"
pem = "3.0.4"
reqwest = { version = "0.12", features = [
    "cookies",
    "hickory-dns",
    "json",
    "rustls-tls",
] }
rcgen = { version = "0.13.2", features = ["pem"] }
rustls = { version = "0.23.19", features = ["aws-lc-rs"] }
x509-parser = "0.16.0"


#Database
sqlx = { version = "0.8", features = [
    "runtime-tokio",
    "tls-rustls",
    "sqlite",
    "macros",
    "migrate",
    "chrono",
    "uuid",
] }

#Serialization
serde = { version = "1.0", features = ["derive"] }
serde_bytes = "0.11.15"
serde_json = "1.0"

#Logging
tracing = "0.1.40"
tracing-appender = "0.2.3"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }

#Web Frameworks
askama = "0.12.1"
axum = { version = "0.8.1", features = ["macros", "multipart"] }
axum-extra = { version = "0.10.0", features = ["form"] }
axum-server = { version = "0.7.1", features = ["tls-rustls"] }
build-time = "0.1.3"
http = "1.2.0"
http-body-util = "0.1.2"
image = "0.25.5"
mime_guess = "2.0.5"
rust-embed = "8.5.0"
time = "0.3.37"
tower = "0.5.2"
tower-http = { version = "0.6.2", features = ["full"] }
tower-livereload = "0.9.6"
tower-sessions = { version = "0.14.0", default-features = false, features = [
    "axum-core",
    "signed",
] }
tower-sessions-sqlx-store = { version = "0.15.0", features = ["sqlite"] }
uuid = "1.11.0"
webauthn-rs = { version = "0.5.1", features = [
    "conditional-ui",
    "danger-allow-state-serialisation",
] }
#Forcing a vendored openssl to avoid packaging issues
openssl = { version = "0.10", features = ["vendored"] }
#Fixing "cookie" to support serialize/deserialize
cookie = { git = "https://github.com/chotchki/cookie-rs.git", branch = "serde_support", features = [
    "percent-encode",
    "signed",
    "serde",
] }

#Editor work
markdown = "1.0.0-alpha.22"
mdast_util_to_markdown = "0.0.1"


[patch.crates-io]
cookie = { git = "https://github.com/chotchki/cookie-rs.git", branch = "serde_support", features = [
    "percent-encode",
    "signed",
    "serde",
] }

[dev-dependencies]
tracing-test = { version = "0.2.5", features = ["no-env-filter"] }
