[package]
name = "hotchkiss-io"
description = "Christopher Hotchkiss's Web Home"
version = "1.0.1"
edition = "2024"

[features]
# Gates the iOS-Simulator e2e (`tests/e2e_ios.rs`) — it boots a sim (10–60 s) and
# needs Xcode, so it's out of the default `cargo test` (run with this feature on a
# mac with a sim). NOT `#[ignore]`-gated: the `lint_no_ignored_tests` guard bans
# the ignore attribute (it rots silently); a Cargo feature is the visible,
# on-demand alternative.
ios_e2e = []

[build-dependencies]
anyhow = "1.0"
reqwest = { version = "0.12", features = [
    "cookies",
    "hickory-dns",
    "json",
    "rustls-tls",
] }
sqlx = { version = "0.8", features = [
    "runtime-tokio",
    "tls-rustls",
    "sqlite",
    "macros",
    "migrate",
    "chrono",
    "uuid",
] }
tokio = { version = "1.41.1", features = ["full"] }
# fab-web bundle fetch (build.rs): gunzip + untar + sha256-verify the pinned WASM
# editor release into OUT_DIR for rust-embed (Phase CW).
flate2 = "1.0"
tar = "0.4"
sha2 = "0.10"
serde_json = "1.0"


[dependencies]
#Core Rust
anyhow = "1.0"
strum = { version = "0.26", features = ["derive"] }
url = "2.5.4"

#Async
tokio = { version = "1.41.1", features = ["full"] }
tokio-util = "0.7"

#Certificate Setup
instant-acme = "0.7.2"
hickory-resolver = "0.24.2"
pem = "3.0.4"
reqwest = { version = "0.12", features = [
    "cookies",
    "hickory-dns",
    "json",
    "multipart",
    "rustls-tls",
] }
rcgen = { version = "0.13.2", features = ["pem"] }
rustls = { version = "0.23.19", features = ["aws-lc-rs"] }
x509-parser = "0.16.0"


#Database
sqlx = { version = "0.8", features = [
    "runtime-tokio",
    "tls-rustls",
    "sqlite",
    "macros",
    "migrate",
    "chrono",
    "uuid",
] }

#Serialization
serde = { version = "1.0", features = ["derive"] }
serde_bytes = "0.11.15"
serde_json = "1.0"

#Logging
tracing = "0.1.40"
tracing-appender = "0.2.3"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }

#Web Frameworks
askama = "0.14.0"
axum = { version = "0.8.1", features = ["macros", "multipart"] }
axum-extra = { version = "0.10.0", features = ["form"] }
axum-server = { version = "0.7.1", features = ["tls-rustls"] }
build-time = "0.1.3"
http = "1.2.0"
http-body-util = "0.1.2"
image = "0.25.5"
mime_guess = "2.0.5"
rust-embed = { version = "8.5.0", features = ["interpolate-folder-path"] }
time = "0.3.37"
tower = { version = "0.5.2", features = ["util"] }
tower-http = { version = "0.6.2", features = ["full"] }
tower-livereload = "0.9.6"
tower-sessions = { version = "0.14.0", default-features = false, features = [
    "axum-core",
    "signed",
] }
tower-sessions-sqlx-store = { version = "0.15.0", features = ["sqlite"] }
uuid = { version = "1.11.0", features = ["v4", "v7"] }
webauthn-rs = { version = "0.5.1", features = [
    "conditional-ui",
    "danger-allow-state-serialisation",
] }
#Forcing a vendored openssl to avoid packaging issues
openssl = { version = "0.10", features = ["vendored"] }
#Streaming SHA-256 for large-file uploads: openssl's Hasher isn't Send so it can't
#be held across an .await in the async ingest loop; sha2's is. Same digest as the
#openssl one-shot, so content-addressed dedup stays consistent across both paths.
sha2 = "0.10"
#Free-space probe for multi-drive media storage — pick the write root by available
#space (fill-in-order across drives). statvfs under the hood.
fs4 = "0.13"

#Editor work
markdown = "1.0.0-alpha.22"
mdast_util_to_markdown = "0.0.1"
#Inline diagrams: D2 source (fenced ```d2) compiled to SVG at request time by
#shelling to a brew-installed `d2` binary; the SVG is embedded as a base64
#data-URI <img> so it survives the markdown round-trip + renders isolated.
base64 = "0.22"

#Add macos tray icon to anchor running
tray-wrapper = "0.4.1"
clap = { version = "4.5.41", features = ["derive"] }

#Resolves the host's LAN IP for test_support::TestServer::lan_url (used by iOS
#Simulator e2e). Lives in regular deps because test_support is pub from the lib.
local-ip-address = "0.6"

#Need to find the homedir
[target."cfg(target_os = \"macos\")".dependencies]
objc2-foundation = { version = "0.3.1", features = [
    "NSPathUtilities",
    "NSString",
] }

[dev-dependencies]
chromiumoxide = "0.9.1"
futures = "0.3.32"
ios-inspect = { git = "https://github.com/chotchki/ios-inspect", branch = "main" }
tempfile = "3"
tracing-test = { version = "0.2.5", features = ["no-env-filter"] }
