[package]
name = "hotchkiss-io-db"
description = "The embedded database for hotchkiss-io"
version = "0.1.0"
edition = "2021"
links = "hotchkissiodb"

[build-dependencies]
#Async
tokio = { version = "1.41.1", features = ["full"] }

#Database
sqlx = { version = "0.8", features = [
    "runtime-tokio",
    "tls-native-tls",
    "sqlite",
    "macros",
    "migrate",
    "chrono",
] }

[dependencies]
#Async
tokio = { version = "1.41.1", features = ["full"] }

#Database
sqlx = { version = "0.8", features = [
    "runtime-tokio",
    "tls-native-tls",
    "sqlite",
    "macros",
    "migrate",
    "chrono",
] }
