[package]
name = "hotchkiss-io-server"
description = "Christopher Hotchkiss's Web Home"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "hotchkiss-io"
path = "src/main.rs"

[dependencies]
hotchkiss-io-db = { path = "../hotchkiss-io-db" }
hotchkiss-io-ip = { path = "../hotchkiss-io-ip" }

#Core Rust
anyhow = "1.0"
thiserror = "2"

#Async
tokio = { version = "1.41.1", features = ["full"] }

#Certificate Setup
acme-lib = "0.9.1"
cloudflare = "0.11.0"
reqwest = { version = "0.12", features = ["json"] }
trust-dns-server = "0.23.2"

#Database
sqlx = { version = "0.8", features = [
    "runtime-tokio",
    "tls-native-tls",
    "sqlite",
    "macros",
    "migrate",
    "chrono",
] }

#Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

#Logging
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }

#Web Frameworks
askama = "0.12.1"
axum = "0.7.7"
axum-server = "0.7.1"
tower = "0.5.1"
tower-http = { version = "0.6.1", features = ["fs"] }
