[package]
name = "hotchkiss-io-server"
description = "Christopher Hotchkiss's Web Home"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "hotchkiss-io"
path = "src/main.rs"

[build-dependencies]
anyhow = "1.0"

[dependencies]
hotchkiss-io-db = { path = "../hotchkiss-io-db" }

#Core Rust
anyhow = "1.0"
url = "2.5.4"

#Async
tokio = { version = "1.41.1", features = ["full"] }

#Certificate Setup
acme-lib = "0.9.1"
reqwest = { version = "0.12", features = ["cookies", "json", "rustls-tls"] }
rustls = { version = "0.23.19", features = ["ring"] }


#Database
sqlx = { version = "0.8", features = [
    "runtime-tokio",
    "tls-native-tls",
    "sqlite",
    "macros",
    "migrate",
    "chrono",
] }

#Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

#Logging
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }

#Web Frameworks
askama = "0.12.1"
axum = "0.7.7"
axum-server = { version = "0.7.1", features = ["tls-rustls"] }
mime_guess = "2.0.5"
#hyper-util = "0.1.10"
rust-embed = "8.5.0"
tower = "0.5.1"
tower-http = { version = "0.6.1", features = ["fs"] }
#npm_rs = "1.0"
